# records-of-processing-activities-db-dump

./: .flake8  .gitignore  README.md  pyproject.toml
db-dump/: README.md  mypy.ini  noxfile.py  pyproject.toml
db-dump/src/records_of_processing_activities_db_dump/: db_dump.py
db-dump/tests/: __init__.py  test_db_dump.py
extract/: extract_mongodb_data.py
notebooks/: README.md  pyproject.toml  statistikk.ipynb
