[tool.poetry]
name = "records-of-processing-activities-notebooks"
version = "0.1.0"
description = "Notebooks project to analyse data."
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
